--- a/index.ipynb
+++ b/index.ipynb
@@ -46,28 +46,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here"
+    "class passenger():\n",
+    "    def __init__(self, first = \"NONE\", last = \"NONE\", email = \"NONE\", rides_taken = 0):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.email = email\n",
+    "        self.rides_taken = rides_taken\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rebecca\n",
+      "Black\n",
+      "rebecca.black@gmail.com\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "rebecca_black = None # initialize Rebecca Black here\n",
+    "rebecca_black = passenger(\"Rebecca\", \"Black\", \"rebecca.black@gmail.com\", 0) # initialize Rebecca Black here\n",
     "print(rebecca_black.first) # \"Rebecca\"\n",
     "print(rebecca_black.last) # \"Black\"\n",
     "print(rebecca_black.email) # \"rebecca.black@gmail.com\"\n",
     "print(rebecca_black.rides_taken) # 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NONE, NONE, NONE, 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "shivam = passenger()\n",
+    "print(f\"{shivam.first}, {shivam.last}, {shivam.email}, {shivam.rides_taken}\")"
    ]
   },
   {
@@ -95,25 +126,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here"
+    "class driver():\n",
+    "    \n",
+    "    def __init__(self, first, last, favorite_hobby = \"driving\"):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.favorite_hobby = favorite_hobby"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dale\n",
+      "Earnhardt\n",
+      "driving\n"
+     ]
+    }
+   ],
    "source": [
-    "dale_earnhardt = None # initialize Dale Earnhardt here\n",
+    "dale_earnhardt = driver(\"Dale\", \"Earnhardt\") # initialize Dale Earnhardt here\n",
     "print(dale_earnhardt.first) # \"Dale\"\n",
     "print(dale_earnhardt.last) # \"Earnhardt\"\n",
     "print(dale_earnhardt.favorite_hobby) # \"driving\""
@@ -150,9 +193,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -164,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
